# anika-blue

./: .dockerignore  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  app.py  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  lint.yml  test.yml
anika_blue/: __init__.py  __main__.py  app.py
anika_blue/templates/: index.html  shade_card.html  stats.html
templates/: index.html  stats.html
tests/: __init__.py  test_app.py
