[project]
name = "anika-blue"
version = "0.1.0"
description = "Interactive web application to discover your perfect shade of blue"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
